// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the gallery go to next image 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Gallery
    dispatch={[Function]}
    photoList={
        Array [
            Object {
              "photo": "/assets/main01.jpg",
              "thumbnail": "/assets/thumb01.jpg",
              "title": "Abstract art ",
            },
            Object {
              "photo": "/assets/main02.jpg",
              "thumbnail": "/assets/thumb02.jpg",
              "title": "Riding the wave",
            },
            Object {
              "photo": "/assets/main03.jpg",
              "thumbnail": "/assets/thumb03.jpg",
              "title": "Sushi dinner",
            },
            Object {
              "photo": "/assets/main04.jpg",
              "thumbnail": "/assets/thumb04.jpg",
              "title": "Cat photo",
            },
          ]
    }
    selected={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <PhotoViewer
          title="Riding the wave"
>
          <Photo
                    alt="Riding the wave"
                    className="main-photo"
                    src="/assets/main02.jpg"
          />
          <div>
                    <Button
                              onClick={[Function]}
                    >
                              &lt; Previous
                    </Button>
                    <Button
                              onClick={[Function]}
                    >
                              Random
                    </Button>
                    <Button
                              onClick={[Function]}
                    >
                              Next &gt;
                    </Button>
          </div>
</PhotoViewer>,
        <ThumbNailViewer
          clickAction={[Function]}
          selected={1}
>
          Object {
                    "photo": "/assets/main01.jpg",
                    "thumbnail": "/assets/thumb01.jpg",
                    "title": "Abstract art ",
                  }
          Object {
                    "photo": "/assets/main02.jpg",
                    "thumbnail": "/assets/thumb02.jpg",
                    "title": "Riding the wave",
                  }
          Object {
                    "photo": "/assets/main03.jpg",
                    "thumbnail": "/assets/thumb03.jpg",
                    "title": "Sushi dinner",
                  }
          Object {
                    "photo": "/assets/main04.jpg",
                    "thumbnail": "/assets/thumb04.jpg",
                    "title": "Cat photo",
                  }
</ThumbNailViewer>,
      ],
      "className": "gallery",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Photo
              alt="Riding the wave"
              className="main-photo"
              src="/assets/main02.jpg"
/>,
            <div>
              <Button
                            onClick={[Function]}
              >
                            &lt; Previous
              </Button>
              <Button
                            onClick={[Function]}
              >
                            Random
              </Button>
              <Button
                            onClick={[Function]}
              >
                            Next &gt;
              </Button>
</div>,
          ],
          "title": "Riding the wave",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "alt": "Riding the wave",
              "className": "main-photo",
              "src": "/assets/main02.jpg",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Button
                  onClick={[Function]}
>
                  &lt; Previous
</Button>,
                <Button
                  onClick={[Function]}
>
                  Random
</Button>,
                <Button
                  onClick={[Function]}
>
                  Next &gt;
</Button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "< Previous",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "< Previous",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Random",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Random",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Next >",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Next >",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            Object {
              "photo": "/assets/main01.jpg",
              "thumbnail": "/assets/thumb01.jpg",
              "title": "Abstract art ",
            },
            Object {
              "photo": "/assets/main02.jpg",
              "thumbnail": "/assets/thumb02.jpg",
              "title": "Riding the wave",
            },
            Object {
              "photo": "/assets/main03.jpg",
              "thumbnail": "/assets/thumb03.jpg",
              "title": "Sushi dinner",
            },
            Object {
              "photo": "/assets/main04.jpg",
              "thumbnail": "/assets/thumb04.jpg",
              "title": "Cat photo",
            },
          ],
          "clickAction": [Function],
          "selected": 1,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "photo": "/assets/main01.jpg",
            "thumbnail": "/assets/thumb01.jpg",
            "title": "Abstract art ",
          },
          Object {
            "photo": "/assets/main02.jpg",
            "thumbnail": "/assets/thumb02.jpg",
            "title": "Riding the wave",
          },
          Object {
            "photo": "/assets/main03.jpg",
            "thumbnail": "/assets/thumb03.jpg",
            "title": "Sushi dinner",
          },
          Object {
            "photo": "/assets/main04.jpg",
            "thumbnail": "/assets/thumb04.jpg",
            "title": "Cat photo",
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <PhotoViewer
            title="Riding the wave"
>
            <Photo
                        alt="Riding the wave"
                        className="main-photo"
                        src="/assets/main02.jpg"
            />
            <div>
                        <Button
                                    onClick={[Function]}
                        >
                                    &lt; Previous
                        </Button>
                        <Button
                                    onClick={[Function]}
                        >
                                    Random
                        </Button>
                        <Button
                                    onClick={[Function]}
                        >
                                    Next &gt;
                        </Button>
            </div>
</PhotoViewer>,
          <ThumbNailViewer
            clickAction={[Function]}
            selected={1}
>
            Object {
                        "photo": "/assets/main01.jpg",
                        "thumbnail": "/assets/thumb01.jpg",
                        "title": "Abstract art ",
                      }
            Object {
                        "photo": "/assets/main02.jpg",
                        "thumbnail": "/assets/thumb02.jpg",
                        "title": "Riding the wave",
                      }
            Object {
                        "photo": "/assets/main03.jpg",
                        "thumbnail": "/assets/thumb03.jpg",
                        "title": "Sushi dinner",
                      }
            Object {
                        "photo": "/assets/main04.jpg",
                        "thumbnail": "/assets/thumb04.jpg",
                        "title": "Cat photo",
                      }
</ThumbNailViewer>,
        ],
        "className": "gallery",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Photo
                alt="Riding the wave"
                className="main-photo"
                src="/assets/main02.jpg"
/>,
              <div>
                <Button
                                onClick={[Function]}
                >
                                &lt; Previous
                </Button>
                <Button
                                onClick={[Function]}
                >
                                Random
                </Button>
                <Button
                                onClick={[Function]}
                >
                                Next &gt;
                </Button>
</div>,
            ],
            "title": "Riding the wave",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "Riding the wave",
                "className": "main-photo",
                "src": "/assets/main02.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Button
                    onClick={[Function]}
>
                    &lt; Previous
</Button>,
                  <Button
                    onClick={[Function]}
>
                    Random
</Button>,
                  <Button
                    onClick={[Function]}
>
                    Next &gt;
</Button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "< Previous",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "< Previous",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Random",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "Random",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Next >",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "Next >",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              Object {
                "photo": "/assets/main01.jpg",
                "thumbnail": "/assets/thumb01.jpg",
                "title": "Abstract art ",
              },
              Object {
                "photo": "/assets/main02.jpg",
                "thumbnail": "/assets/thumb02.jpg",
                "title": "Riding the wave",
              },
              Object {
                "photo": "/assets/main03.jpg",
                "thumbnail": "/assets/thumb03.jpg",
                "title": "Sushi dinner",
              },
              Object {
                "photo": "/assets/main04.jpg",
                "thumbnail": "/assets/thumb04.jpg",
                "title": "Cat photo",
              },
            ],
            "clickAction": [Function],
            "selected": 1,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "photo": "/assets/main01.jpg",
              "thumbnail": "/assets/thumb01.jpg",
              "title": "Abstract art ",
            },
            Object {
              "photo": "/assets/main02.jpg",
              "thumbnail": "/assets/thumb02.jpg",
              "title": "Riding the wave",
            },
            Object {
              "photo": "/assets/main03.jpg",
              "thumbnail": "/assets/thumb03.jpg",
              "title": "Sushi dinner",
            },
            Object {
              "photo": "/assets/main04.jpg",
              "thumbnail": "/assets/thumb04.jpg",
              "title": "Cat photo",
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render the gallery go to previous image using keyboard 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Gallery
    dispatch={[Function]}
    photoList={
        Array [
            Object {
              "photo": "/assets/main01.jpg",
              "thumbnail": "/assets/thumb01.jpg",
              "title": "Abstract art ",
            },
            Object {
              "photo": "/assets/main02.jpg",
              "thumbnail": "/assets/thumb02.jpg",
              "title": "Riding the wave",
            },
            Object {
              "photo": "/assets/main03.jpg",
              "thumbnail": "/assets/thumb03.jpg",
              "title": "Sushi dinner",
            },
            Object {
              "photo": "/assets/main04.jpg",
              "thumbnail": "/assets/thumb04.jpg",
              "title": "Cat photo",
            },
          ]
    }
    selected={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <PhotoViewer
          title="Abstract art "
>
          <Photo
                    alt="Abstract art "
                    className="main-photo"
                    src="/assets/main01.jpg"
          />
          <div>
                    <Button
                              onClick={[Function]}
                    >
                              &lt; Previous
                    </Button>
                    <Button
                              onClick={[Function]}
                    >
                              Random
                    </Button>
                    <Button
                              onClick={[Function]}
                    >
                              Next &gt;
                    </Button>
          </div>
</PhotoViewer>,
        <ThumbNailViewer
          clickAction={[Function]}
          selected={0}
>
          Object {
                    "photo": "/assets/main01.jpg",
                    "thumbnail": "/assets/thumb01.jpg",
                    "title": "Abstract art ",
                  }
          Object {
                    "photo": "/assets/main02.jpg",
                    "thumbnail": "/assets/thumb02.jpg",
                    "title": "Riding the wave",
                  }
          Object {
                    "photo": "/assets/main03.jpg",
                    "thumbnail": "/assets/thumb03.jpg",
                    "title": "Sushi dinner",
                  }
          Object {
                    "photo": "/assets/main04.jpg",
                    "thumbnail": "/assets/thumb04.jpg",
                    "title": "Cat photo",
                  }
</ThumbNailViewer>,
      ],
      "className": "gallery",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Photo
              alt="Abstract art "
              className="main-photo"
              src="/assets/main01.jpg"
/>,
            <div>
              <Button
                            onClick={[Function]}
              >
                            &lt; Previous
              </Button>
              <Button
                            onClick={[Function]}
              >
                            Random
              </Button>
              <Button
                            onClick={[Function]}
              >
                            Next &gt;
              </Button>
</div>,
          ],
          "title": "Abstract art ",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "alt": "Abstract art ",
              "className": "main-photo",
              "src": "/assets/main01.jpg",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Button
                  onClick={[Function]}
>
                  &lt; Previous
</Button>,
                <Button
                  onClick={[Function]}
>
                  Random
</Button>,
                <Button
                  onClick={[Function]}
>
                  Next &gt;
</Button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "< Previous",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "< Previous",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Random",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Random",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Next >",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Next >",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            Object {
              "photo": "/assets/main01.jpg",
              "thumbnail": "/assets/thumb01.jpg",
              "title": "Abstract art ",
            },
            Object {
              "photo": "/assets/main02.jpg",
              "thumbnail": "/assets/thumb02.jpg",
              "title": "Riding the wave",
            },
            Object {
              "photo": "/assets/main03.jpg",
              "thumbnail": "/assets/thumb03.jpg",
              "title": "Sushi dinner",
            },
            Object {
              "photo": "/assets/main04.jpg",
              "thumbnail": "/assets/thumb04.jpg",
              "title": "Cat photo",
            },
          ],
          "clickAction": [Function],
          "selected": 0,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "photo": "/assets/main01.jpg",
            "thumbnail": "/assets/thumb01.jpg",
            "title": "Abstract art ",
          },
          Object {
            "photo": "/assets/main02.jpg",
            "thumbnail": "/assets/thumb02.jpg",
            "title": "Riding the wave",
          },
          Object {
            "photo": "/assets/main03.jpg",
            "thumbnail": "/assets/thumb03.jpg",
            "title": "Sushi dinner",
          },
          Object {
            "photo": "/assets/main04.jpg",
            "thumbnail": "/assets/thumb04.jpg",
            "title": "Cat photo",
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <PhotoViewer
            title="Abstract art "
>
            <Photo
                        alt="Abstract art "
                        className="main-photo"
                        src="/assets/main01.jpg"
            />
            <div>
                        <Button
                                    onClick={[Function]}
                        >
                                    &lt; Previous
                        </Button>
                        <Button
                                    onClick={[Function]}
                        >
                                    Random
                        </Button>
                        <Button
                                    onClick={[Function]}
                        >
                                    Next &gt;
                        </Button>
            </div>
</PhotoViewer>,
          <ThumbNailViewer
            clickAction={[Function]}
            selected={0}
>
            Object {
                        "photo": "/assets/main01.jpg",
                        "thumbnail": "/assets/thumb01.jpg",
                        "title": "Abstract art ",
                      }
            Object {
                        "photo": "/assets/main02.jpg",
                        "thumbnail": "/assets/thumb02.jpg",
                        "title": "Riding the wave",
                      }
            Object {
                        "photo": "/assets/main03.jpg",
                        "thumbnail": "/assets/thumb03.jpg",
                        "title": "Sushi dinner",
                      }
            Object {
                        "photo": "/assets/main04.jpg",
                        "thumbnail": "/assets/thumb04.jpg",
                        "title": "Cat photo",
                      }
</ThumbNailViewer>,
        ],
        "className": "gallery",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Photo
                alt="Abstract art "
                className="main-photo"
                src="/assets/main01.jpg"
/>,
              <div>
                <Button
                                onClick={[Function]}
                >
                                &lt; Previous
                </Button>
                <Button
                                onClick={[Function]}
                >
                                Random
                </Button>
                <Button
                                onClick={[Function]}
                >
                                Next &gt;
                </Button>
</div>,
            ],
            "title": "Abstract art ",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "Abstract art ",
                "className": "main-photo",
                "src": "/assets/main01.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Button
                    onClick={[Function]}
>
                    &lt; Previous
</Button>,
                  <Button
                    onClick={[Function]}
>
                    Random
</Button>,
                  <Button
                    onClick={[Function]}
>
                    Next &gt;
</Button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "< Previous",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "< Previous",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Random",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "Random",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Next >",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "Next >",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              Object {
                "photo": "/assets/main01.jpg",
                "thumbnail": "/assets/thumb01.jpg",
                "title": "Abstract art ",
              },
              Object {
                "photo": "/assets/main02.jpg",
                "thumbnail": "/assets/thumb02.jpg",
                "title": "Riding the wave",
              },
              Object {
                "photo": "/assets/main03.jpg",
                "thumbnail": "/assets/thumb03.jpg",
                "title": "Sushi dinner",
              },
              Object {
                "photo": "/assets/main04.jpg",
                "thumbnail": "/assets/thumb04.jpg",
                "title": "Cat photo",
              },
            ],
            "clickAction": [Function],
            "selected": 0,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "photo": "/assets/main01.jpg",
              "thumbnail": "/assets/thumb01.jpg",
              "title": "Abstract art ",
            },
            Object {
              "photo": "/assets/main02.jpg",
              "thumbnail": "/assets/thumb02.jpg",
              "title": "Riding the wave",
            },
            Object {
              "photo": "/assets/main03.jpg",
              "thumbnail": "/assets/thumb03.jpg",
              "title": "Sushi dinner",
            },
            Object {
              "photo": "/assets/main04.jpg",
              "thumbnail": "/assets/thumb04.jpg",
              "title": "Cat photo",
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render the gallery the initial state showing first image selected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Gallery
    dispatch={[Function]}
    photoList={
        Array [
            Object {
              "photo": "/assets/main01.jpg",
              "thumbnail": "/assets/thumb01.jpg",
              "title": "Abstract art ",
            },
            Object {
              "photo": "/assets/main02.jpg",
              "thumbnail": "/assets/thumb02.jpg",
              "title": "Riding the wave",
            },
            Object {
              "photo": "/assets/main03.jpg",
              "thumbnail": "/assets/thumb03.jpg",
              "title": "Sushi dinner",
            },
            Object {
              "photo": "/assets/main04.jpg",
              "thumbnail": "/assets/thumb04.jpg",
              "title": "Cat photo",
            },
          ]
    }
    selected={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <PhotoViewer
          title="Abstract art "
>
          <Photo
                    alt="Abstract art "
                    className="main-photo"
                    src="/assets/main01.jpg"
          />
          <div>
                    <Button
                              onClick={[Function]}
                    >
                              &lt; Previous
                    </Button>
                    <Button
                              onClick={[Function]}
                    >
                              Random
                    </Button>
                    <Button
                              onClick={[Function]}
                    >
                              Next &gt;
                    </Button>
          </div>
</PhotoViewer>,
        <ThumbNailViewer
          clickAction={[Function]}
          selected={0}
>
          Object {
                    "photo": "/assets/main01.jpg",
                    "thumbnail": "/assets/thumb01.jpg",
                    "title": "Abstract art ",
                  }
          Object {
                    "photo": "/assets/main02.jpg",
                    "thumbnail": "/assets/thumb02.jpg",
                    "title": "Riding the wave",
                  }
          Object {
                    "photo": "/assets/main03.jpg",
                    "thumbnail": "/assets/thumb03.jpg",
                    "title": "Sushi dinner",
                  }
          Object {
                    "photo": "/assets/main04.jpg",
                    "thumbnail": "/assets/thumb04.jpg",
                    "title": "Cat photo",
                  }
</ThumbNailViewer>,
      ],
      "className": "gallery",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Photo
              alt="Abstract art "
              className="main-photo"
              src="/assets/main01.jpg"
/>,
            <div>
              <Button
                            onClick={[Function]}
              >
                            &lt; Previous
              </Button>
              <Button
                            onClick={[Function]}
              >
                            Random
              </Button>
              <Button
                            onClick={[Function]}
              >
                            Next &gt;
              </Button>
</div>,
          ],
          "title": "Abstract art ",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "alt": "Abstract art ",
              "className": "main-photo",
              "src": "/assets/main01.jpg",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Button
                  onClick={[Function]}
>
                  &lt; Previous
</Button>,
                <Button
                  onClick={[Function]}
>
                  Random
</Button>,
                <Button
                  onClick={[Function]}
>
                  Next &gt;
</Button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "< Previous",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "< Previous",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Random",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Random",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Next >",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Next >",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            Object {
              "photo": "/assets/main01.jpg",
              "thumbnail": "/assets/thumb01.jpg",
              "title": "Abstract art ",
            },
            Object {
              "photo": "/assets/main02.jpg",
              "thumbnail": "/assets/thumb02.jpg",
              "title": "Riding the wave",
            },
            Object {
              "photo": "/assets/main03.jpg",
              "thumbnail": "/assets/thumb03.jpg",
              "title": "Sushi dinner",
            },
            Object {
              "photo": "/assets/main04.jpg",
              "thumbnail": "/assets/thumb04.jpg",
              "title": "Cat photo",
            },
          ],
          "clickAction": [Function],
          "selected": 0,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "photo": "/assets/main01.jpg",
            "thumbnail": "/assets/thumb01.jpg",
            "title": "Abstract art ",
          },
          Object {
            "photo": "/assets/main02.jpg",
            "thumbnail": "/assets/thumb02.jpg",
            "title": "Riding the wave",
          },
          Object {
            "photo": "/assets/main03.jpg",
            "thumbnail": "/assets/thumb03.jpg",
            "title": "Sushi dinner",
          },
          Object {
            "photo": "/assets/main04.jpg",
            "thumbnail": "/assets/thumb04.jpg",
            "title": "Cat photo",
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <PhotoViewer
            title="Abstract art "
>
            <Photo
                        alt="Abstract art "
                        className="main-photo"
                        src="/assets/main01.jpg"
            />
            <div>
                        <Button
                                    onClick={[Function]}
                        >
                                    &lt; Previous
                        </Button>
                        <Button
                                    onClick={[Function]}
                        >
                                    Random
                        </Button>
                        <Button
                                    onClick={[Function]}
                        >
                                    Next &gt;
                        </Button>
            </div>
</PhotoViewer>,
          <ThumbNailViewer
            clickAction={[Function]}
            selected={0}
>
            Object {
                        "photo": "/assets/main01.jpg",
                        "thumbnail": "/assets/thumb01.jpg",
                        "title": "Abstract art ",
                      }
            Object {
                        "photo": "/assets/main02.jpg",
                        "thumbnail": "/assets/thumb02.jpg",
                        "title": "Riding the wave",
                      }
            Object {
                        "photo": "/assets/main03.jpg",
                        "thumbnail": "/assets/thumb03.jpg",
                        "title": "Sushi dinner",
                      }
            Object {
                        "photo": "/assets/main04.jpg",
                        "thumbnail": "/assets/thumb04.jpg",
                        "title": "Cat photo",
                      }
</ThumbNailViewer>,
        ],
        "className": "gallery",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Photo
                alt="Abstract art "
                className="main-photo"
                src="/assets/main01.jpg"
/>,
              <div>
                <Button
                                onClick={[Function]}
                >
                                &lt; Previous
                </Button>
                <Button
                                onClick={[Function]}
                >
                                Random
                </Button>
                <Button
                                onClick={[Function]}
                >
                                Next &gt;
                </Button>
</div>,
            ],
            "title": "Abstract art ",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "Abstract art ",
                "className": "main-photo",
                "src": "/assets/main01.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Button
                    onClick={[Function]}
>
                    &lt; Previous
</Button>,
                  <Button
                    onClick={[Function]}
>
                    Random
</Button>,
                  <Button
                    onClick={[Function]}
>
                    Next &gt;
</Button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "< Previous",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "< Previous",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Random",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "Random",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Next >",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "Next >",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              Object {
                "photo": "/assets/main01.jpg",
                "thumbnail": "/assets/thumb01.jpg",
                "title": "Abstract art ",
              },
              Object {
                "photo": "/assets/main02.jpg",
                "thumbnail": "/assets/thumb02.jpg",
                "title": "Riding the wave",
              },
              Object {
                "photo": "/assets/main03.jpg",
                "thumbnail": "/assets/thumb03.jpg",
                "title": "Sushi dinner",
              },
              Object {
                "photo": "/assets/main04.jpg",
                "thumbnail": "/assets/thumb04.jpg",
                "title": "Cat photo",
              },
            ],
            "clickAction": [Function],
            "selected": 0,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "photo": "/assets/main01.jpg",
              "thumbnail": "/assets/thumb01.jpg",
              "title": "Abstract art ",
            },
            Object {
              "photo": "/assets/main02.jpg",
              "thumbnail": "/assets/thumb02.jpg",
              "title": "Riding the wave",
            },
            Object {
              "photo": "/assets/main03.jpg",
              "thumbnail": "/assets/thumb03.jpg",
              "title": "Sushi dinner",
            },
            Object {
              "photo": "/assets/main04.jpg",
              "thumbnail": "/assets/thumb04.jpg",
              "title": "Cat photo",
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
